--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     color: #666;
 }
 .pimg1{
-    background-image: url(images/image4.jpeg);
+    background-image: url(images/image4.jpg);
     min-height: 100%;
 }  
 .pimg2{
